--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/inquirer": "6.5.0",
     "chalk": "4.0.0",
     "inquirer": "7.1.0",
+    "minimist": "1.2.5",
     "node-cmd": "3.0.0",
     "node-run-cmd": "1.0.1",
     "tslib": "1.11.1"
